--- a/about/index.html
+++ b/about/index.html
@@ -38,7 +38,7 @@
   <div id="header-outer" class="outer">
     <div id="header-title" class="inner">
       <h1 id="logo-wrap">
-        <a href="/" id="logo">Hexo</a>
+        <a href="/" id="logo">张鹏</a>
       </h1>
       
     </div>
